# TXCompute

./: BOM.csv  HardwareReport.md  LICENSE  README.md
Hardware/: ~Fallout.kicad_sch.lck
Hardware/CAD/product/step/: main.step
Hardware/CAD/source/assets/: power_button_circuit.f3d
Hardware/PCB/: Fallout.kicad_prl  Fallout.kicad_pro  Fallout.kicad_sch  ~Fallout.kicad_pro.lck
Hardware/PCB/PowerButton/: .step  PowerButton.kicad_pcb  PowerButton.kicad_prl  PowerButton.kicad_pro  PowerButton.kicad_sch  power_button.step  power_button.step.[sS][tT][eE][pP]
Software/: CMakeLists.txt
Software/components/MainClass/: CMakeLists.txt
Software/components/TXCSL/: CMakeLists.txt
Software/components/TXCSL/include/impl/csl/: compiler.hpp  compiler_bracket_parser.hpp  compiler_codegen.hpp  compiler_tokenlizer.hpp  definition.hpp  evaluator.hpp
Software/components/TXCSL/include/tx/: csl.h
Software/components/TXCSL/src/: compiler.cpp  compiler_codegen.cpp  compiler_tokenlizer.cpp
Software/components/TXESP_Infrastructure/: CMakeLists.txt
Software/components/TXESP_Infrastructure/include/impl/: basic_esp_utils.hpp  buffer.hpp  frame_composer.hpp  ili9488_driver_panel.hpp  power_manager.hpp  text_renderer.hpp  usb_keyboard_input_handler.hpp
Software/components/TXESP_Infrastructure/include/tx/: esp.h
Software/components/TXLib_Addons/: CMakeLists.txt
Software/components/TerminalEngine/: CMakeLists.txt
Software/main/: CMakeLists.txt  main.cpp
docs/readme-assets/: hinge-rotation-anim.avi
docs/zine-page/: 10101010.txt  Render.psd  ZinePage.txt
(+30 files in other folders)
